# foot-lint

./: README.md
foot-lint/: pyproject.toml
foot-lint/foot_lint/: __init__.py  _types.py  linter.py
foot-lint/tests/: bad.asm  good.asm
