[tool.poetry]
name = "foot_lint"
version = "0.1.0"
description = ""
authors = ["iTecAI <matteovh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
rich = "^13.5.2"
typing-extensions = "^4.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "foot_lint:main"